refactor: messagingpush module test classes